fixed @font-face declarations to be relative paths instead of off of root so that Github Pages (and others likely) would host the font files properly; made all 0px -> 0 and some other spacing fixes b/c I was being a little OCD.

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,21 +1,21 @@
 @import url("960gs/960.css");
 
 /* http://www.levien.com/type/myfonts/inconsolata.html */
-@font-face 
+@font-face
 {
   font-family: "inconsolata";
-  src: url("/fonts/Inconsolata.otf");
-}                                    
+  src: url("../fonts/Inconsolata.otf");
+}
 
 @font-face
 {
   font-family: "droid sans";
-  src: url("/fonts/DroidSans.ttf");
+  src: url("../fonts/DroidSans.ttf");
 }
 @font-face
 {
   font-family: "droid sans bold";
-  src: url("/fonts/DroidSans-Bold.ttf");
+  src: url("../fonts/DroidSans-Bold.ttf");
 }
 body
 {
@@ -26,13 +26,13 @@ body
 }
 a
 {
-  text-decoration:none;
+  text-decoration: none;
   border-bottom: solid 1px #3030a2;
 }
 a:hover
-{  
-  text-decoration:none;
-  border-bottom: 0px;
+{
+  text-decoration: none;
+  border-bottom: 0;
 }
 
 a:visited{
@@ -62,7 +62,7 @@ h2
 {
   font-size:  137.5%;
 }
-h3 
+h3
 {
   font-size: 125.0%;
 }
@@ -82,8 +82,8 @@ pre,code
 
 .noul
 {
-  border-bottom: 0px;
-  text-decoration:none;
+  border-bottom: 0;
+  text-decoration: none;
 }
 
 header, footer
@@ -100,7 +100,7 @@ header h1{
 header h1 a, header h1 a:visited
 {
   color:#a23030;
-  text-decoration:none;
+  text-decoration: none;
   border-bottom: none;
 }
 
@@ -111,5 +111,5 @@ footer{
 
 ul.posts
 {
-  list-style-type:none;
+  list-style-type: none;
 }
